--- a/style.css
+++ b/style.css
@@ -1,5 +1,44 @@
+h1{
+  text-align: center;
+}
+nav {
+  text-align: center;
+  a {
+    padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+  }
+}
 body {
   width: 100%;
   height: 100%;
   margin: 0;
 }
+img {
+  display: block;
+  margin: 0 auto;
+  title {
+  text-align: center;
+  font-size: smaller;  
+  }
+  }
+  figcaption {
+    text-align: center;
+  }
+  
+  #featured-property p{
+    width: 800px;
+    text-align: center;
+    margin: 0 auto;
+    padding: 10px 40px 10px 40px;
+    font-size: larger;
+  
+  }
+
+  #details div{
+    float: left;
+    margin: 0 auto;
+    background-color: #b63232;
+    text-align: center;
+    width: 25%;
+  }
